2021-08-11 Richard Frith-Macdonald <rfm@gnu.org>

	* Source/tzdb.h: Public domain time zone file parsing etc
	* Source/NSTimeZone.m: Use code from tzdb.h
	* Headers/Foundation/NSTimeZone.h: Remove some obsolete comments
	* configure.ac:  check for stdbool.h needed by tzdb.h
	* configure: regenerate
	* Headers/GNUstepBase/config.h.in: define for stdbool check
	* Tests/base/NSTimeZone/Paris.tzdbv1: test timezone file (version 1)
	* Tests/base/NSTimeZone/Paris.tzdbv2: test timezone file (version 2)
	* Tests/base/NSTimeZone/localtime.m: Some testcases for v1/v2
	Incorporate work by Emmanuel Dreyfus to use public domain tzfile
	parsing code supporting times too large to fit in 32bit value.
	The public domain code has some support for the Posix TZ environment
	variable style string used by version2 to support times after the last
	transition in the file, but I'm not convinced it works properly, so
	this may need to be revisited.

2021-08-03 Frederik Seiffert <frederik@algoriddim.com>

	* Headers/GNUstepBase/config.h.in:
	* configure:
	* configure.ac:
	Use pkgconfig to find libxslt.

2021-07-29 Frederik Seiffert <frederik@algoriddim.com>

	* Headers/GNUstepBase/config.h.in:
	* Source/Additions/Unicode.m:
	* Source/GSICUString.h:
	* Source/NSCalendar.m:
	* Source/NSDateFormatter.m:
	* Source/NSLocale.m:
	* Source/NSNumberFormatter.m:
	* Source/NSPredicate.m:
	* Source/NSRegularExpression.m:
	* Source/NSString.m:
	* Source/NSTimeZone.m:
	* configure:
	* configure.ac:
	Add support for using ICU DLL from Windows 10.

2021-07-29 Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSTimeZone.m:
	* Headers/GNUstepBase/config.h.in:
	* configure.ac:
	* configure:
	Always use builtin header for parsing posix time zone files, so we
	know that the field names are consistent and so we knw we have a
	define for the file magic number.

2021-07-26 Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSXMLParser.m:
	Fix error caused by having methods in category for strict parser